[WFCORE-5406] Add --add-opens to the SE 9+ VM launch for expected reflective access by the server